@@ -1048,18 +1048,19 @@ TCL_CMD_HEADER( Rivet_Upload )
      * - subcommand integer progressive index
      * - subcommand required (minimum) number of arguments
      *
-     *----+----------------------------------------+-------+
-     *    |         argv[1]    argv[2]   argv[3]   | argc  |
-     *----+----------------------------------------+-------+
-     *    |  upload channel   uploadname           |   3   |
-     *    |  upload save      uploadname filename  |   4   |
-     *    |  upload data      uploadname           |   3   |
-     *    |  upload exists    uploadname           |   3   |
-     *    |  upload size      uploadname           |   3   |
-     *    |  upload type                           |   2   |
-     *    |  upload filename  uploadname           |   3   |
-     *    |  upload tempname  uploadname           |   3   |
-     *    |  upload names                          |   2   |
+     * +----------------------------------------+-------+
+     * |         argv[1]    argv[2]   argv[3]   | argc  |
+     * +----------------------------------------+-------+
+     * |  upload channel   uploadname           |   3   |
+     * |  upload save      uploadname filename  |   4   |
+     * |  upload data      uploadname           |   3   |
+     * |  upload exists    uploadname           |   3   |
+     * |  upload size      uploadname           |   3   |
+     * |  upload type      uploadname           |   3   |
+     * |  upload filename  uploadname           |   3   |
+     * |  upload tempname  uploadname           |   3   |
+     * |  upload names                          |   2   |
+     * +----------------------------------------+-------+
      *
      * a subcommand first optional argument must be the name
      * of an upload
@@ -1090,10 +1091,10 @@ TCL_CMD_HEADER( Rivet_Upload )
         NAMES
     };
 
-    static CONST84 int cmds_objc[] = { 3,4,3,3,3,2,3,3,2 };
+    static CONST84 int cmds_objc[] = { 3,4,3,3,3,3,3,3,2 };
     int expected_objc;
 
-    rivet_thread_private*   private;
+    rivet_thread_private* private;
 
     THREAD_PRIVATE_DATA(private)
     CHECK_REQUEST_REC(private,"::rivet::upload")
@@ -1105,7 +1106,7 @@ TCL_CMD_HEADER( Rivet_Upload )
 
     expected_objc = cmds_objc[subcommandindex];
 
-    if (objc < expected_objc) {
+    if (objc != expected_objc) {
         Tcl_Obj* infoobj = Tcl_NewStringObj("Wrong argument numbers: ",-1);
 
         Tcl_IncrRefCount(infoobj);
