@@ -1,3 +1,8 @@
+2020-02-03 Massimo Manghi <mxmanghi@apache.org>
+    * src/request/: Update obsolete copyright statements
+    * src/mod_rivet_ng/rivetCore.c: update comments to upload command
+    * tests: changed upload file test
+
 2019-12-12 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet_ng/apache_config.c: copying also upload_files_to_var in
     Rivet_MergeConfig
